<resources>
    //INICIO
    <string name="ini_title">Pide Altoque</string>
    <string name="app_name">PideAltoque</string>
    <string name="txt_cel">N° de Celular</string>
    <string name="txt_pass">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="cboRecordar">Recordarme</string>

    //REGISTRO
    <string name="txt_nombre">Nombres</string>
    <string name="txt_correo">E-mail</string>
    <string name="txt_celular">N° Celular</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arthur</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menú</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="Header">User</string>

    <string name="comida_precio">0.00</string>
    <string name="comida_name">None</string>
    <string name="comida_descripcion">Descripción</string>
    <string name="comida_desc"> </string>
    <string name="ImgDesc"> </string>
    <string name="app_bar_layout"> </string>
    <string name="ButtonL">-</string>
    <string name="buttonR">+</string>


    <string name="textViewNumber">1</string>

    <string name="TextTotal">Total: </string>
    <string name="btn_confirm">Confirmar Orden </string>


    <string name="_0_00">0.00</string>
    <string name="comidanames">comidaname</string>
    <string name="init_carritos">init_carrito</string>

    //Carrito
    <string name="total_carrito">Total:</string>
    <string name="s_000_carrito">S/. 000</string>
    <string name="confirmar_orden_carrito">Confirmar Orden</string>

    //Comida detalle
    <string name="soles"> </string>

    //Carrito_layout
    <string name="descripci_n_carrito_layout">Descripción</string>
    <string name="nombre_del_men_carrito_layout">Nombre del Menú</string>

    //Dialog_carrito
    <string name="ingrese_n_mero_de_mesa_dialog_carrito">Ingrese Número de Mesa</string>
    <string name="ingrese_nombre_del_cliente_dilog_carrito">Ingrese Nombre del Cliente</string>
    <string name="cancelar_dialog_carrito">Cancelar</string>
    <string name="aceptar_dialog_carrito">Aceptar</string>
    //Menu_item
    <string name="Descripcion_menu_item">Descripcion</string>
    <string name="Nombre_del_menu">Nombre del Menu</string>

    //Header_inicio
    <string name="user_header_inicio">User</string>

    //Order Layout
    <string name="OrdenId">Orden ID</string>
    <string name="Estado">Estado</string>
    <string name="Mesero">Mesero</string>
    <string name="Numero_de_mesa">Numero de Mesa</string>
    <string name="Cliente">Cliente</string>

    //CUADRO DE DIALOGO
    <string name="titulo">Eliminar</string>
    <string name="cuerpo">¿Esta seguro de eliminar?</string>
    <string name="btnSI">Si</string>
    <string name="btNO">No</string>
</resources>
