<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/ini_title"/>

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/txt_nombre"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/txt_correo"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txt_celular"
            android:maxLength="9"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/txt_celular"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txt_contraseña"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/txt_contraseña"
            android:inputType="textPassword"
            android:padding="10dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blueg"
            android:text="@string/btn_registrarse"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue"

            android:text="@string/btn_cancelar"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>