<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/ini_title"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/txt_cel"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/txt_cel"
            android:inputType="number"
            android:maxLength="9"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"

            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/cboRecordar"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="120dp"
            android:layout_height="52dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/cboRecordar"
            android:textColor="@color/white">

        </com.rey.material.widget.CheckBox>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/blueg"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/blue"

            android:text="@string/btn_registrar"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>