<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/dialog_mesa"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:hint="@string/ingrese_n_mero_de_mesa_dialog_carrito"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/dialog_cliente"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:hint="@string/ingrese_nombre_del_cliente_dilog_carrito"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal">

                <info.hoang8f.widget.FButton
                    android:id="@+id/btnCancelD"
                    android:text="@string/cancelar_dialog_carrito"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/semib"
                    android:textColor="@color/black">
                </info.hoang8f.widget.FButton>

                <info.hoang8f.widget.FButton
                    android:id="@+id/btnAceptarD"
                    android:text="@string/aceptar_dialog_carrito"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/semib"
                    android:textColor="@color/black">
                </info.hoang8f.widget.FButton>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>